[package]
name = "kapir"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
deadpool-postgres = { version = "0.9" }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
derive_more = "0.99.17"
serde = { version = "1.0.137", features = ["derive"] }
log4rs = "1.1.1"
log = "0.4.8"
chrono = "0.4"