[package]
name = "kapir"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.4"
mysql_async = "0.33.0"
mysql = "20.0.2"
derive_more = "0.99.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_with = "1.6.3"
log4rs = "1.1.1"
log = "0.4.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13.1"