[package]
name = "kapir"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-web-httpauth = "0.8.2"
actix-cors = "0.7.1"
mysql_async = "0.33.0"
mysql = { version = "26.0.0", features = ["chrono"] }
derive_more = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.12.0"
log4rs = "1.3.0"
log = "0.4.27"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"

